--- a/stylesPractice.css
+++ b/stylesPractice.css
@@ -1,8 +1,8 @@
 /* regular page */
 
-h2 {
+body {
 
-background-color: #e1e1e1;; /* #111 Black */
+background-color: lightblue; /* #111 Black */
 
 }
 
